istio/infra/alb-tls-plaintext/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
  labels:
    app: httpbin
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: httpbin
